--- a/index.html
+++ b/index.html
@@ -17,16 +17,6 @@
     <title>Driving Theory Test Practice 2022</title>
   </head>
   <body>
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'b1198f294e45f01a544b42c65480755d',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.highperformancedisplayformat.com/b1198f294e45f01a544b42c65480755d/invoke.js"></scr' + 'ipt>');
-</script>
     <div class="container">
       <div class="intro-container">
         <div id="intro">Driving Theory Test Practice 2022</div>
@@ -35,11 +25,22 @@
         <a href="praticeLanding.html">
         <button id="start-btn" class="start-btn btn">Practice</button>
         </a>
-
         <a href="quiz.html">
           <button id="quiz-button" class="start-btn btn" onclick="setCategory('mock')">Mock Test</button>
         </a>
       </div>
     </div>
+	<div class="ad">
+	<script type="text/javascript">
+	atOptions = {
+		'key' : 'b1198f294e45f01a544b42c65480755d',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.highperformancedisplayformat.com/b1198f294e45f01a544b42c65480755d/invoke.js"></scr' + 'ipt>');
+	</script>
+	  </div>
   </body>
 </html>
