--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
           <button id="quiz-button" class="start-btn btn" onclick="setCategory('mock')">Mock Test</button>
         </a>
       </div>
+  </div>
   </body>
-	      </div>
+
+	<footer>
 	<div class="ad">
 	<script type="text/javascript">
 	atOptions = {
@@ -43,4 +45,5 @@
 	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.highperformancedisplayformat.com/b1198f294e45f01a544b42c65480755d/invoke.js"></scr' + 'ipt>');
 	</script>
 	  </div>
+	</footer>	
 </html>
