--- a/index.html
+++ b/index.html
@@ -30,11 +30,22 @@
         </a>
       </div>
   </div>
-  </body>
+	  
 
-	<footer>
-	<div class="ad">
-	<script type="text/javascript">
+<style>
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
+</style>
+
+<div class="footer">
+  <script type="text/javascript">
 	atOptions = {
 		'key' : 'b1198f294e45f01a544b42c65480755d',
 		'format' : 'iframe',
@@ -44,6 +55,7 @@
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.highperformancedisplayformat.com/b1198f294e45f01a544b42c65480755d/invoke.js"></scr' + 'ipt>');
 	</script>
-	  </div>
-	</footer>	
+</div>
+	  
+  </body>
 </html>
